@startuml
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

package "MySQL schema" {

  class owners <<table>> {
    +uuid id <<PK>>
    --
    full_name <<NN>>
    address
    primary_phone <<NN>>
    secondary_phone
    secondary_phone_name
    instagram
    facebook
    notes TEXT
    created_by_id <<FK,NN>>
    --
    created_at <<NN>>
    updated_at <<NN>>
  }

  class vets <<table>> {
    +uuid id <<PK>>
    --
    name <<NN>>
    address
    phone_number
    registration_number varchar(100)
    notes TEXT
    created_by_id <<FK,NN>>
    --
    created_at <<NN>>
    updated_at <<NN>>
  }

  class cats <<table>> {
    +uuid id <<PK>>
    --
    name <<NN>>
    birth_date <<NN>>
    sex <<NN>>
    breed
    coat
    color
    food_brand
    litter_brand
    personality
    notes TEXT
    last_internal_dewormer_name
    last_internal_deworming_date
    last_external_dewormer_name
    last_external_deworming_date
    last_triple_feline_date
    last_rabies_date
    owner_id <<FK,NN>>
    vet_id <<FK>>
    created_by_id <<FK,NN>>
    --
    created_at <<NN>>
    updated_at <<NN>>
  }

  class cat_photos <<table>> {
    +binary(16) cat_id <<PK,FK,NN>>
    --
    content MEDIUMBLOB <<NN>>
    width int unsigned <<NN>>
    height int unsigned <<NN>>
    byte_size int unsigned <<NN>>
    sha256 char(64) <<NN>>
  }

  class stays <<table>> {
    +uuid id <<PK>>
    --
    owner_id <<FK,NN>>
    start_at <<NN>>
    end_at <<NN>>
    cancelled_at
    notes
    retained_nightly_rate decimal(19,0)
    arrival_transfer_required boolean <<NN>>
    departure_transfer_required boolean <<NN>>
    retained_transfer_rate decimal(19,0)
    transfer_waived boolean <<NN>>
    agreed_amount decimal(19,0)
    created_by_id <<FK,NN>>
    --
    created_at <<NN>>
    updated_at <<NN>>
  }

  class stay_cat <<table>> {
    +stay_id <<PK,FK,NN>>
    +cat_id <<PK,FK,NN>>
  }

  class user_accounts <<table>> {
    +uuid id <<PK>>
    --
    username <<NN,UQ>>
    password_hash <<NN>>
    role <<NN>>
    enabled <<NN>>
    --
    created_at <<NN>>
    updated_at <<NN>>
  }

  class nightly_reference_rates <<table>> {
    +category varchar(20) <<PK,NN>>
    --
    nightly_rate decimal(19,0)
    --
    created_at datetime(6) <<NN>>
    updated_at datetime(6) <<NN>>
  }

  class nightly_reference_rate_changes <<table>> {
    +id binary(16) <<PK,NN>>
    --
    category varchar(20) <<NN>>
    previous_nightly_rate decimal(19,0)
    new_nightly_rate decimal(19,0)
    changed_by_id binary(16) <<FK,NN>>
    changed_at datetime(6) <<NN>>
  }

  class transfer_rates <<table>> {
    +id bigint <<PK,Canonical=1>>
    --
    transfer_rate decimal(19,0)
  }

  class stay_pricing_decisions <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<NN,INDEX>>
    retained_nightly_rate decimal(19,0)
    arrival_transfer_required boolean <<NN>>
    departure_transfer_required boolean <<NN>>
    retained_transfer_rate decimal(19,0)
    transfer_waived boolean <<NN>>
    previous_number_of_nights bigint
    new_number_of_nights bigint <<NN>>
    previous_agreed_amount decimal(19,0)
    new_agreed_amount decimal(19,0) <<NN>>
    decided_by_id binary(16) <<FK,NN>>
    decided_at datetime(6) <<NN>>
    reason text
    sensitive_context_id binary(16) <<FK,UQ>>
  }

  class stay_agreed_amount_corrections <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<NN,INDEX>>
    previous_agreed_amount decimal(19,0)
    new_agreed_amount decimal(19,0) <<NN>>
    decided_by_id binary(16) <<FK,NN>>
    decided_at datetime(6) <<NN>>
    reason text <<NN>>
    sensitive_context_id binary(16) <<FK,UQ>>
  }

  class stay_payments <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<FK,NN,INDEX>>
    amount decimal(19,0) <<NN>>
    payment_date date <<NN>>
    note text
    annulled boolean <<NN>>
    registered_by_id binary(16) <<FK,NN>>
    --
    created_at datetime(6) <<NN>>
    updated_at datetime(6) <<NN>>
  }

  class stay_payment_edits <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<NN,INDEX>>
    payment_id binary(16) <<NN,INDEX>>
    previous_amount decimal(19,0) <<NN>>
    new_amount decimal(19,0) <<NN>>
    edited_by_id binary(16) <<FK,NN>>
    edited_at datetime(6) <<NN>>
    reason text <<NN>>
    sensitive_context_id binary(16) <<FK,UQ>>
    payment_date date
    payment_note text
    registered_by_id binary(16) <<FK>>
    registered_at datetime(6)
  }

  class stay_payment_annulments <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<NN,INDEX>>
    payment_id binary(16) <<NN,UQ>>
    annulled_by_id binary(16) <<FK,NN>>
    annulled_at datetime(6) <<NN>>
    reason text <<NN>>
    sensitive_context_id binary(16) <<FK,UQ>>
    amount decimal(19,0)
    payment_date date
    payment_note text
    registered_by_id binary(16) <<FK>>
    registered_at datetime(6)
  }

  class sensitive_stay_contexts <<table>> {
    +id binary(16) <<PK,NN>>
    --
    stay_id binary(16) <<NN,INDEX>>
    owner_id binary(16) <<NN,INDEX>>
    owner_full_name varchar(255) <<NN>>
    stay_start_at datetime(6) <<NN>>
    stay_end_at datetime(6) <<NN>>
    stay_cancelled_at datetime(6)
  }

  class sensitive_stay_context_cats <<table>> {
    +context_id binary(16) <<PK,FK,NN>>
    +cat_id binary(16) <<PK,NN,INDEX>>
    --
    cat_name varchar(255) <<NN>>
  }

  class stay_payment_removals <<table>> {
    +id binary(16) <<PK,NN>>
    --
    sensitive_context_id binary(16) <<FK,UQ,NN>>
    stay_id binary(16) <<NN,INDEX>>
    payment_id binary(16) <<UQ,NN>>
    amount decimal(19,0) <<NN>>
    payment_date date <<NN>>
    payment_note text
    annulled boolean <<NN>>
    registered_by_id binary(16) <<FK,NN>>
    registered_at datetime(6) <<NN>>
    removed_by_id binary(16) <<FK,NN>>
    removed_at datetime(6) <<NN,INDEX>>
    reason text <<NN>>
  }

  owners "1" -- "0..*" cats : FK owner_id
  vets   "0..1" -- "0..*" cats : FK vet_id (nullable)
  owners "1" -- "0..*" stays : FK owner_id
  stays  "1" -- "1..*" stay_cat : FK stay_id
  cats   "1" -- "0..*" stay_cat : FK cat_id
  cats   "1" -- "0..1" cat_photos : FK cat_id ON DELETE CASCADE
  user_accounts "1" -- "0..*" owners : FK created_by_id
  user_accounts "1" -- "0..*" cats : FK created_by_id
  user_accounts "1" -- "0..*" vets : FK created_by_id
  user_accounts "1" -- "0..*" stays : FK created_by_id
  user_accounts "1" -- "0..*" nightly_reference_rate_changes : FK changed_by_id
  user_accounts "1" -- "0..*" stay_pricing_decisions : FK decided_by_id
  user_accounts "1" -- "0..*" stay_agreed_amount_corrections : FK decided_by_id
  stays "1" -- "0..*" stay_payments : FK stay_id
  user_accounts "1" -- "0..*" stay_payments : FK registered_by_id
  user_accounts "1" -- "0..*" stay_payment_edits : FK edited_by_id
  user_accounts "1" -- "0..*" stay_payment_annulments : FK annulled_by_id
  sensitive_stay_contexts "1" -- "0..*" sensitive_stay_context_cats : FK context_id
  sensitive_stay_contexts "1" -- "0..1" stay_pricing_decisions : FK sensitive_context_id
  sensitive_stay_contexts "1" -- "0..1" stay_agreed_amount_corrections : FK sensitive_context_id
  sensitive_stay_contexts "1" -- "0..1" stay_payment_edits : FK sensitive_context_id
  sensitive_stay_contexts "1" -- "0..1" stay_payment_annulments : FK sensitive_context_id
  sensitive_stay_contexts "1" -- "0..1" stay_payment_removals : FK sensitive_context_id
  user_accounts "1" -- "0..*" stay_payment_edits : FK registered_by_id
  user_accounts "1" -- "0..*" stay_payment_annulments : FK registered_by_id
  user_accounts "1" -- "0..*" stay_payment_removals : FK registered_by_id
  user_accounts "1" -- "0..*" stay_payment_removals : FK removed_by_id
}

note right of stays
There is no status column.
The app computes it.

The relationship with cats is
resolved through stay_cat.

Pricing amounts are nullable for
legacy rows. No rate category or
suggested total is persisted.
Transfer legs and captured basis are separate
from accommodation pricing.
end note

note bottom of transfer_rates
Canonical singleton current transfer rate.
Null means unavailable; positive values are
whole units with at most 19 digits.
end note

note bottom of stay_cat
The pair (stay_id, cat_id)
cannot be repeated.
end note

note bottom of nightly_reference_rates
Accepted category strings:
ONE_CAT, ONE_CAT_7_TO_14,
ONE_CAT_15_TO_29, ONE_CAT_30_PLUS,
TWO_CATS, THREE_PLUS_CATS.
nightly_rate decimal(19,0) is nullable;
non-null values are positive whole numbers
of at most 19 digits.
end note

note bottom of nightly_reference_rate_changes
Append-only snapshots.
Category is one of the same six fixed strings.
Previous/new values are null or positive,
and every row records a real transition.
The actor FK is restrictive.
end note

note bottom of stay_pricing_decisions
Append-only pricing confirmations.
stay_id deliberately has no foreign key,
so evidence survives stay deletion.
The actor FK is restrictive.
Captured transfer legs, waiver, and rate allow
historical component reconstruction without
reading the live Stay or current transfer rate.
end note

note bottom of stay_agreed_amount_corrections
Append-only administrative corrections.
stay_id deliberately has no foreign key.
Previous amount may be null for inherited
stays; new amount and reason are required.
Checks require a real whole-unit change.
The actor FK is restrictive.
end note

note bottom of stay_payments
Operational positive whole-unit payments.
Annulment is terminal; rows remain visible.
No derived balance or condition is persisted.
The stay and registrant FKs are restrictive.
end note

note bottom of stay_payment_edits
Append-only amount-correction evidence.
stay_id and payment_id have no foreign keys,
so evidence survives operational deletion.
Amounts are positive and must differ.
end note

note bottom of stay_payment_annulments
Append-only terminal-action evidence.
payment_id is unique and has no foreign key.
stay_id also has no foreign key.
end note

note bottom of sensitive_stay_contexts
Immutable per-event operational snapshot.
stay_id and owner_id deliberately have no
foreign keys; cat identities are likewise scalar.
end note

note bottom of stay_payment_removals
Append-only exact removal evidence.
stay_id and payment_id have no foreign keys.
Only context and actor attribution are restrictive.
end note

@enduml
